add router link to logo in the header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="border-b shadow-sm">
   <div class="container py-4">
     <div class="flex items-center justify-between">
-      <a routerLink="/" class="cursor-pointer">
+      <a routerLink="/home" class="cursor-pointer">
         <img src="assets/logo.svg" alt="Collect Darija" class="h-[40px]" />
       </a>
       <div class="flex items-center gap-4">
