leaderboard page enhancements

--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,7 +1,5 @@
-<div class="flex flex-col justify-center w-full h-full space-y-4">
-  <h1 class="flex items-center justify-center font-bold text-[42px]">
-    Leaderboard
-  </h1>
+<div class="leaderboard-page">
+  <h1 class="text-center font-bold text-[42px] mb-10">Leaderboard</h1>
   <app-podium></app-podium>
   <app-leaderboard-table></app-leaderboard-table>
 </div>
