add some spacing to the footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="p-8">
   <div class="container">
     <div class="flex items-center justify-center text-muted text-sm">
       Darija.ai &copy; 2024. All rights reserved
