fix loading next sentence animation

--- a/src/app/pages/translate/translate.component.html
+++ b/src/app/pages/translate/translate.component.html
@@ -77,7 +77,9 @@
 } @else {
   <div class="flex items-center justify-center py-18">
     <div class="text-center text-muted">
-      <i class="ri-loader-4-line animate-spin ri-3x mb-4"></i>
+      <div class="animate-spin">
+        <i class="ri-loader-4-line ri-3x mb-4"></i>
+      </div>
       <p>Loading Next Sentence ...</p>
     </div>
   </div>
