--- a/src/app/components/leaderboard-table/leaderboard-table.component.html
+++ b/src/app/components/leaderboard-table/leaderboard-table.component.html
@@ -1,31 +1,43 @@
-<div class="relative overflow-x-auto rounded-xl border mx-2">
-  <table class="w-full text-left font-bold text-text">
-    <thead class="font-bold text-text uppercase bg-white">
-      <tr>
-        <th scope="col" class="pl-3 py-3">#</th>
-        <th scope="col" class="py-3">User</th>
-        <th scope="col" class="px-6 py-3">Score</th>
-        <th scope="col" class="py-3">Translations</th>
-        <th scope="col" class="py-3">Audio</th>
-      </tr>
-    </thead>
-    <tbody class="bg-background border">
-      @for (item of users; track $index) {
-        <tr class="border">
-          <td class="pl-3 py-4">00{{ $index + 4 }}</td>
-          <th scope="row" class="py-4 text-text">
-            <img
-              class="w-9 h-9 rounded-full bg-cover object-cover inline-block mr-2"
-              src="{{ item.image }}"
-              alt=""
-            />
-            {{ item.name }}
-          </th>
-          <td class="px-6 py-4">{{ item.score }}</td>
-          <td class="py-4">{{ item.translations }}</td>
-          <td class="py-4">{{ item.audio }}</td>
+@if (users$ | async; as users) {
+  <div class="relative overflow-x-auto rounded-xl border mx-2">
+    <table class="w-full text-left font-bold text-text">
+      <thead class="font-bold text-text uppercase bg-white">
+        <tr>
+          <th scope="col" class="pl-3 py-3">#</th>
+          <th scope="col" class="py-3">User</th>
+          <th scope="col" class="px-6 py-3">Score</th>
+          <th scope="col" class="py-3">Translations</th>
         </tr>
-      }
-    </tbody>
-  </table>
-</div>
+      </thead>
+      <tbody class="bg-background border">
+        @for (user of users; track $index) {
+          <tr
+            class="border"
+            [ngClass]="
+              currentUser && currentUser.id === user.id
+                ? 'bg-primary text-white'
+                : ''
+            "
+          >
+            <td class="pl-3 py-4">
+              {{ user.ranking.toString().padStart(3, "0") }}
+            </td>
+            <th scope="row" class="py-4">
+              <img
+                class="w-9 h-9 rounded-full bg-cover object-cover inline-block mr-2"
+                src="{{ user.picture }}"
+                alt=""
+              />
+              {{ user.username }}
+              {{ currentUser && currentUser.id === user.id ? "(You)" : "" }}
+            </th>
+            <td class="px-6 py-4">{{ user.score }}</td>
+            <td class="py-4">{{ user.translationsCount }}</td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+} @else {
+  <div class="text-center">No one in the leaderboard yet</div>
+}
