--- a/src/app/pages/translate/translate.component.html
+++ b/src/app/pages/translate/translate.component.html
@@ -59,7 +59,14 @@
         </div>
       </div>
     </div>
-    <div class="flex justify-end mt-4">
+    <div class="flex justify-end mt-4 gap-2">
+      <button
+        class="flex items-center justify-center w-full md:w-auto px-8 py-3 text-muted rounded-full font-medium hover:bg-indigo-50 disabled:cursor-not-allowed disabled:opacity-50 border border-muted"
+        (click)="skipSentence()"
+      >
+        <i class="ri-skip-forward-fill mr-1"></i>
+        Skip
+      </button>
       <button
         class="flex items-center justify-center w-full md:w-auto gap-2 px-8 py-3 bg-primary text-white rounded-full font-medium hover:opacity-90 disabled:cursor-not-allowed disabled:opacity-50"
         [disabled]="flags.loading || limitReached()"
