feat: add HistoryTableComponent

--- a/src/app/components/history-table/history-table.component.html
+++ b/src/app/components/history-table/history-table.component.html
@@ -29,7 +29,7 @@
           <i class="ri ri-star-fill ms-2"></i>
         </td>
         <td class="px-2 py-4">
-          <button class="w-6 h-6">
+          <button (click)="openDialog()" class="w-6 h-6">
             <i class="ri ri-eye-fill text-primary"></i>
           </button>
         </td>
