--- a/src/app/components/history-table/history-table.component.html
+++ b/src/app/components/history-table/history-table.component.html
@@ -11,29 +11,30 @@
       </tr>
     </thead>
     <tbody class="bg-background border">
-      <tr class="border">
-        <td class="pl-3 py-4">010</td>
-        <td class="px-2 py-4">
-          <p class="truncate max-w-20 md:max-w-72 lg:max-w-lg">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit
-            amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit
-          </p>
-        </td>
-        <td class="px-2 py-4">10</td>
-        <td class="px-2 py-4">10</td>
-        <td class="px-2 py-4">
-          4.5
-          <i class="ri ri-star-fill ms-2"></i>
-        </td>
-        <td class="px-2 py-4">
-          <button (click)="openDialog()" class="w-6 h-6">
-            <i class="ri ri-eye-fill text-primary"></i>
-          </button>
-        </td>
-      </tr>
+      @for (translation of history; let i = $index; track i) {
+        <tr class="border">
+          <td class="pl-3 py-4">
+            {{ i + 1 }}
+          </td>
+          <td class="px-2 py-4">
+            <p class="truncate max-w-20 md:max-w-72 lg:max-w-lg">
+              {{ translation.sentence.content }}
+            </p>
+          </td>
+          <td class="px-2 py-4">10</td>
+          <td class="px-2 py-4">-</td>
+          <td class="px-2 py-4">
+            -
+            <!-- 4.5
+            <i class="ri ri-star-fill ms-2"></i> -->
+          </td>
+          <td class="px-2 py-4">
+            <button (click)="openDialog(translation)" class="w-6 h-6">
+              <i class="ri ri-eye-fill text-primary"></i>
+            </button>
+          </td>
+        </tr>
+      }
     </tbody>
   </table>
 </div>
