--- a/src/app/pages/translate/translate.component.html
+++ b/src/app/pages/translate/translate.component.html
@@ -87,12 +87,5 @@
     icon="ri-font-size-2"
   ></app-no-data>
 } @else {
-  <div class="flex items-center justify-center py-18">
-    <div class="text-center text-muted">
-      <div class="animate-spin">
-        <i class="ri-loader-4-line ri-3x mb-4"></i>
-      </div>
-      <p>Loading Next Sentence ...</p>
-    </div>
-  </div>
+  <app-loading content="Loading Next Sentence ..." />
 }
