--- a/src/app/pages/history/history.component.html
+++ b/src/app/pages/history/history.component.html
@@ -1,4 +1,8 @@
 <div class="history-page">
   <h1 class="text-center font-bold text-[42px] mb-10">My Contributions</h1>
-  <app-history-table [history]="history"></app-history-table>
+  @if (!loading) {
+    <app-history-table [history]="history"></app-history-table>
+  } @else {
+    <app-loading content="Loading your history ..." />
+  }
 </div>
