update logo and favicon

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container py-4">
     <div class="flex items-center justify-between">
       <a routerLink="/home" class="cursor-pointer">
-        <img src="assets/logo.svg" alt="Collect Darija" class="h-[40px]" />
+        <img src="assets/logo.png" alt="Collect Darija" class="h-[40px]" />
       </a>
       <div class="flex items-center gap-4">
         @if (currentRoute !== "/translate") {
